refactor: converted list to map to return the configurable options in key value